[metadata]
name = jtyr-pre-commit-hooks
version = 1.0.0
description = Jiri Tyr's pre-commit hooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jtyr/pre-commit-hooks
author = Jiri Tyr
author_email = jiri.tyr@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    pre-commit>=2.17.0
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    docker-image = hooks.docker_image:main
    helm-version-increment = hooks.check_helm_version:main
